base/ejbca/base/ejbca-intermediate-cert-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /ejbca/ra/cert
  name: ejbca-intermediate-cert-ingress
spec:
  tls:
    - hosts:
        - i.pki.bpsusine.com
      secretName: ejbca-issuer-cert
  rules:
    - host: i.pki.bpsusine.com
      http:
        paths:
          - path: /safy-intermediate-ca.cer
            pathType: ImplementationSpecific
            backend:
              service:
                name: ejbca-service
                port:
                  name: proxied-https
