base/ejbca/base/ejbca-legal-person-crl-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /ejbca/publicweb/crls/search.cgi
  name: ejbca-legal-person-crl-ingress
spec:
  rules:
    - host: crl.bpsusine.com
      http:
        paths:
          - path: /safy-legal-person-ca.crl
            pathType: Exact
            backend:
              service:
                name: ejbca-service
                port:
                  name: proxied-https
