base/ejbca/base/ejbca-natural-person-cert-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /ejbca/ra/cert
  name: ejbca-natural-person-cert-ingress
spec:
  rules:
    - host: cert.bpsusine.com
      http:
        paths:
          - path: /safy-natural-person-ca.cer
            pathType: Exact
            backend:
              service:
                name: ejbca-service
                port:
                  name: proxied-https
