base/ejbca/base/ejbca-ocsp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ejbca-ocsp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /ejbca/publicweb/status/ocsp
spec:
  tls:
    - hosts:
        - i.pki.bpsusine.com
      secretName: ejbca-ocsp-cert
  rules:
    - host: o.pki.bpsusine.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ejbca-service
                port:
                  name: proxied-https
