base/ejbca/base/ejbca-root-crl-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /ejbca/publicweb/crls/search.cgi
  name: ejbca-root-crl-ingress
spec:
  tls:
    - hosts:
        - c.pki.bpsusine.com
      secretName: ejbca-crl-cert
  rules:
    - host: c.pki.bpsusine.com
      http:
        paths:
          - path: /safy-root-ca.crl
            pathType: ImplementationSpecific
            backend:
              service:
                name: ejbca-service
                port:
                  name: proxied-https
